--- a/dowodnowy.html
+++ b/dowodnowy.html
@@ -236,7 +236,7 @@
     <script src="https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/dowod_files/timenew.js"></script>
     <main>
         <section id="lew">
-            <img src="https://i.imgur.com/hoW1LQr.png" class="object-contain w-fu 11 rounded-1g photo" style="left: 1px; /* X: 1px */
+            <img src="https://i.imgur.com/r7jP6d1.png" class="object-contain w-fu 11 rounded-1g photo" style="left: 1px; /* X: 1px */
     src="URL_ZDJĘCIA" 
    top: 1px; /* Y: 1px */
             width: 135px; /* Width: 135px */
@@ -254,12 +254,12 @@
             </div>
         </section>
         <section id="praw">
-            <p><strong></strong> Brak</p>            <p class="sub">Imię (Imiona)</p><br>
-            <p><strong></strong> Brak </p>            <p class="sub">Nazwiskо</p><br>
+            <p><strong></strong> Antonina</p>            <p class="sub">Imię (Imiona)</p><br>
+            <p><strong></strong> Wójcik </p>            <p class="sub">Nazwiskо</p><br>
             <p>POLSKIE</p>
             <p class="sub">Obywatelstwo</p><br>
-            <p><strong></strong> Brak</p>            <p class="sub">Data urodzenia</p><br>
-            <p><strong></strong> Brak</p>            <p class="sub">Numer PЕSEL</p><br>
+            <p><strong></strong> 23.06.2006</p>            <p class="sub">Data urodzenia</p><br>
+            <p><strong></strong> 06262341143</p>            <p class="sub">Numer PЕSEL</p><br>
         </section>
     </main>
   <section id="bottom">
@@ -291,15 +291,15 @@
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Nazwiskо rodowе</p>
-                <p class='main'><strong></strong> Grzesiński </p>            </section>
+                <p class='main'><strong></strong> Wójcik </p>            </section>
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Płеć</p>
-                <p class='main'><strong></strong> Mężczyzna </p>            </section>
+                <p class='main'><strong></strong> Kobieta</p>            </section>
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Nazwiskо rodowе ojca</p>
-                <p class='main'><strong></strong> Grzesiński </p>            </section>
+                <p class='main'><strong></strong> Wójcik</p>            </section>
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Nazwiskо rodowе matki</p>
